deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test2603
  namespace: userstarted
  labels:
    app: test2603
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test2603
  template:
    metadata:
      labels:
        app: test2603
      annotations:
        rollout.version: "1.0.4"   # จุดนี้สำคัญที่สุด
        rollout.fix: "force-new-pull-20260415"
    spec:
      containers:
      - name: web
        image: quay.io/phatthananvst01/quaytest2603:latest
        ports:
        - containerPort: 80
