service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test2603
  labels:
    app: test2603
spec:
  selector:
    app: test2603
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
