route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test2603
spec:
  to:
    kind: Service
    name: test2603
  port:
    targetPort: 80
  tls:
    termination: edge
